ajuste de nombre y screenshot

--- a/theme/style.css
+++ b/theme/style.css
@@ -1,5 +1,5 @@
 /*
- * Theme Name: My Timber Starter Theme
- * Description: Starter Theme to use with Timber
- * Author: Upstatement and YOU!
+ * Theme Name: Plataforma documental CNID-CTCI
+ * Description: Requiere Timber para funcionar.
+ * Author: A Pie
 */
