--- a/theme/style.css
+++ b/theme/style.css
@@ -2,4 +2,5 @@
  * Theme Name: Plataforma documental CNID-CTCI
  * Description: Requiere Timber para funcionar.
  * Author: A Pie
+ * Version: 0.0.1
 */
