--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,3 +1,5 @@
 <div class="wrapper">
-	<div class="footer-content">Copyright {{"now"|date('Y')}}</div>
+	
 </div>
+
+<div class="debugversion">v.{{ version }}</div>
