--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -38,3 +38,12 @@ header.site-header {
 		@extend .container;
 	}
 }
+
+.debugversion {
+	position: fixed;
+	bottom: 0;
+	right: 0;
+	background-color: white;
+	font-size: 9px;
+	padding: 4px;
+}
