--- a/views/partial/docdata.twig
+++ b/views/partial/docdata.twig
@@ -1,5 +1,8 @@
 <div class="ctci_docdatadebug">
 	
-	{{ data }}
+	<ul class="infodoc">
+		<li>Fecha de publicación: {{data.doc_day}}/{{data.doc_month}}/{{data.doc_year}}</li>
+		<li><a href="{{data.pdfurl}}">Descarga</a></li>
+	</ul>
 	
 </div>
