--- a/views/base.twig
+++ b/views/base.twig
@@ -14,9 +14,9 @@
 					<h1 class="hdr-logo" role="banner">
 						<a class="hdr-logo-link" href="{{site.url}}" rel="home">{{site.name}}</a>
 					</h1>
-					<nav id="nav-main" class="nav-main" role="navigation">
+					<!--<nav id="nav-main" class="nav-main" role="navigation">
 						{% include "menu.twig" with {'items': menu.get_items} %}
-					</nav><!-- #nav -->
+					</nav>--><!-- #nav -->
 				</div>
 			{% endblock %}
 		</header>
