--- a/views/home.twig
+++ b/views/home.twig
@@ -2,9 +2,6 @@
 
 {% block content %}
 	
-	{% for post in posts %}
-		{% include ['tease-'~post.post_type~'.twig', 'tease.twig'] %}
-	{% endfor %}
+	<div id="ctci_search"></div>
 	
-	{% include 'partial/pagination.twig' with { pagination: posts.pagination({show_all: false, mid_size: 3, end_size: 2}) } %}
 {% endblock %}
