--- a/views/single-ctci_doc.twig
+++ b/views/single-ctci_doc.twig
@@ -3,10 +3,9 @@
 {% block content %}
 <div class="content-wrapper">
 	<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-		<img src="{{ post.thumbnail.src|resize(1200, 300) }}">
 		<section class="article-content">
 			<header class="document-header">
-				<h1 class="article-h1">Documento: {{ post.title }}</h1>
+				<h1 class="article-h1">{{ post.title }}</h1>
 				<a href="{{ post.link }}">{{ _e('edit') }}</a>
 			</header>
 
