--- a/views/base.twig
+++ b/views/base.twig
@@ -21,6 +21,10 @@
 			{% endblock %}
 		</header>
 
+		{% if not is_front_page %}
+			<div id="ctci_search" data-layout="mini"></div>
+		{% endif %}
+
 		<section id="content" role="main" class="content-wrapper">
 			<div class="wrapper {{sidebar_class}}">
 				{% if title %}<h1>{{title}}</h1>{% endif %}
