--- a/src/sass/components/DocItem.scss
+++ b/src/sass/components/DocItem.scss
@@ -29,4 +29,12 @@
 	.docText {
 		//margin-right: 212px;
 	}
+
+	.infodoc {
+		li {
+			list-style: none;
+			padding: 0;
+			margin: 0;
+		}
+	}
 }
