--- a/views/single-ctci_doc.twig
+++ b/views/single-ctci_doc.twig
@@ -1,49 +1,62 @@
 {% extends "base.twig" %}
 
 {% block content %}
-<div class="content-wrapper">
-	<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
-		<section class="article-content">
-			<header class="document-header">
-				<h1 class="article-h1">{{ post.title }}</h1>
-				<a href="{{ post.link }}">{{ _e('edit') }}</a>
-			</header>
-
-			<div class="row">
-				<div class="col-md-4">
-					<div class="document-meta">
-						{% include 'partial/docdata.twig' with {data: docmeta} %}
-
-						<div class="docauthor">
-							{% for term in post.terms( {query: {taxonomy: 'docauthor'}}) %}
-							<a class="tag" href="{{term.link}}">{{term}}</a>
-							{% endfor %}
+	<div class="content-wrapper">
+		<article class="post-type-{{ post.post_type }}" id="post-{{ post.ID }}">
+			<section class="article-content">
+				<div class="container-fluid">
+					<div class="row">
+						<div class="col-md-8">
+							{% include 'partial/docviewer.twig' with {data: docmeta} %}
 						</div>
 
-						<div class="doctype">
-							{% for term in post.terms( {query: {taxonomy: 'doctype'}}) %}
-							<a class="tag" href="{{term.link}}">{{term}}</a>
-							{% endfor %}
+						<div class="col-md-4">
+							<div class="docinfozone">
+								<header class="document-header">
+									<h1 class="article-h1">{{ post.title }}</h1>
+								</header>
+								<div class="document-meta">
+									
+									<span class="label">
+										{{docmeta.doc_day}}/{{docmeta.doc_month}}/{{docmeta.doc_year}}
+									</span>
+
+									<div class="docauthor doctermlist">
+										<span class="label">Autor/a: </span>
+										{% for term in post.terms( {query: {taxonomy: 'docauthor'}}) %}
+											<a class="tag" href="{{term.link}}">{{term}}</a>
+										{% endfor %}
+									</div>
+
+									<div class="doctype doctermlist">
+										<span class="label">Tipo de documento: </span>
+										{% for term in post.terms( {query: {taxonomy: 'doctype'}}) %}
+											<a class="tag" href="{{term.link}}">{{term}}</a>
+										{% endfor %}
+									</div>
+
+									<div class="tags doctermlist">
+										<span class="label">Etiquetas: </span>
+										{% for term in post.terms( {query: {taxonomy: 'post_tag'}}) %}
+											<a class="tag" href="{{term.link}}">{{term}}</a>
+										{% endfor %}
+									</div>
+								</div>
+								<div class="article-body">
+									{{post.content}}
+								</div>		
+							</div>
+
+							<a class="btn btn-download btn-dark" href="{{docmeta.pdfurl}}"><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-download' width='24' height='24' viewBox='0 0 24 24' stroke-width='3' stroke='%23607D8B' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z'/%3E%3Cpath d='M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2' /%3E%3Cpolyline points='7 11 12 16 17 11' /%3E%3Cline x1='12' y1='4' x2='12' y2='16' /%3E%3C/svg%3E" alt="">Descarga</a>
 						</div>
 
-						<div class="tags">
-							{% for term in post.terms( {query: {taxonomy: 'post_tag'}}) %}
-							<a class="tag" href="{{term.link}}">{{term}}</a>
-							{% endfor %}
-						</div>
-					</div>		
+
+
+					</div>
 				</div>
+
 				
-				<div class="col-md-8">
-					{% include 'partial/docviewer.twig' with {data: docmeta} %}
-				</div>
-
-			</div>
-
-			<div class="article-body">
-				{{post.content}}
-			</div>
-		</section>
-	</article>
-</div><!-- /content-wrapper -->
+			</section>
+		</article>
+	</div><!-- /content-wrapper -->
 {% endblock %}
