--- a/views/base.twig
+++ b/views/base.twig
@@ -20,6 +20,8 @@
 				</div>
 			{% endblock %}
 		</header>
+		<!-- logged in caution -->
+		{% if is_logged_in %}
 
 		{% if not is_front_page %}
 			<div id="ctci_search" data-layout="mini"></div>
@@ -38,6 +40,8 @@
 				</aside>
 			{% endif %}
 		</section>
+
+		{% endif %}
 
 		{% block footer %}
 			<footer id="footer">
