--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -52,3 +52,12 @@
 .form-row {
 	padding: 12px 0;
 }
+
+h3.resultsTitle {
+	margin: 24px 0;
+}
+
+.loadingZone {
+	text-align: center;
+	padding: 24px;
+}
