--- a/views/base.twig
+++ b/views/base.twig
@@ -12,7 +12,7 @@
 			{% block header %}
 				<div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img src="{{ theme.link}}/../src/img/cnid_logo.svg" alt="{{ site.name }}"></a>
+						<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img src="{{ theme.link}}/../dist/img/cnid_logo.svg" alt="{{ site.name }}"></a>
 					</h1>
 					<!--<nav id="nav-main" class="nav-main" role="navigation">
 						{% include "menu.twig" with {'items': menu.get_items} %}
