--- a/src/sass/components/DocItem.scss
+++ b/src/sass/components/DocItem.scss
@@ -5,6 +5,7 @@
 	display: flex;
 	align-items: flex-start;
 	margin-bottom: 24px;
+	background-color: white;
 	h1 {
 		font-weight: 600;
 		font-size: 24px;
