--- a/src/sass/components/DocViewer.scss
+++ b/src/sass/components/DocViewer.scss
@@ -5,6 +5,7 @@
 	overflow: auto;
 	border: 1px solid #ccc;
 	margin: 0 0 24px 0;
+	background-color: white;
 }
 
 iframe.pdfviewer {
@@ -42,4 +43,9 @@ iframe.pdfviewer {
 .btn-download {
 	margin-top: 24px;
 	font-size: 24px;
+}
+
+.docloadingzone {
+	padding: 48px;
+	text-align: center;
 }
