--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -18,13 +18,17 @@
 .SearchField {
 	margin-bottom: 24px;
 	padding-bottom: 24px;
-	border-bottom: 1px solid white;
+	border-bottom: 1px solid #777;
 	input[type="text"] {
 		margin-right: 12px;
 		padding: 12px;
 		font-size: 24px;
 		min-width: 300px;
 	}
+}
+
+.expanded .SearchField {
+	border-bottom: 0;
 }
 
 .SearchZone {
@@ -37,13 +41,61 @@
 	box-shadow: 0 0 6px #777;
 }
 
-.TaxBrowser {
-	padding: 36px;
-	background-color: #777;
+.expanded .SearchZone {
+	background-color: transparent;
+	box-shadow: none;
 	color: white;
 }
 
-#ctci_search[data-layout="mini"] {
+.mini .SearchZone {
+	margin-bottom: 0;
+}
+
+
+//cambiar este nombre confuso
+.mini .searchZone {
+	display: flex;
+	justify-content: space-around;
+}
+
+.mini .TaxBrowser {
+	padding-top: 0;
+
+	h3 {
+		display: none;
+	}
+}
+
+.TaxBrowser {
+	padding: 36px;
+	background-color: #ccc;
+	color: #777;
+
+	h3 {
+		font-weight: 600;
+		text-align: center;
+		margin-bottom: 24px;
+	}
+}
+
+.searchMainTitle {
+	font-size: 72px;
+	text-align: center;
+	font-weight: 600;
+	color: white;
+	text-transform: uppercase;
+}
+
+.taxbrowserTitle {
+	text-transform: uppercase;
+	text-align: center;
+	color: #333;
+	font-size: 48px;
+	margin: 24px 0 48px 0;
+	font-weight: 600;
+}
+
+#ctci_search .mini {
 	.searchInfo {
 		font-size: 16px;
 	}
@@ -60,4 +112,11 @@ h3.resultsTitle {
 .loadingZone {
 	text-align: center;
 	padding: 24px;
+}
+
+.results {
+	background-color: rgba(255, 255, 255, 0.7);
+	padding: 24px;
+	border: 0;
+	margin: 0 0 24px 0;
 }
