--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -31,7 +31,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 header.header {
 	width: 100%;
-	background-color: white;
+	//background-color: white;
 	color: white;
 	height: 120px;
 }
@@ -43,6 +43,10 @@ header.header {
 	background-color: white;
 	font-size: 9px;
 	padding: 4px;
+}
+
+body {
+	background-color: #020226;
 }
 
 //Singles
