ajustes resultados y gradient fondo

--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -47,6 +47,7 @@ header.header {
 
 body {
 	background-color: #020226;
+	background-image: linear-gradient(to left, #01515a, #020226);
 }
 
 //Singles
