--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -34,7 +34,7 @@
 .SearchZone {
 	text-align: right;
 	padding: 24px;
-	margin-bottom: 24px;
+	margin-bottom: 0;
 	background-color: #ccc;
 	overflow: hidden;
 	text-align: center;
@@ -119,4 +119,18 @@ h3.resultsTitle {
 	padding: 24px;
 	border: 0;
 	margin: 0 0 24px 0;
+}
+
+.results.empty {
+	padding: 0;
+
+	h3.resultsTitle {
+		padding: 24px 24px 0 24px;
+		margin-top: 0;
+	}
+
+	p {
+		padding: 0 24px 24px 24px;
+		margin-bottom: 24px;
+	}
 }
