--- a/src/sass/components/DocViewer.scss
+++ b/src/sass/components/DocViewer.scss
@@ -43,6 +43,9 @@ iframe.pdfviewer {
 .btn-download {
 	margin-top: 24px;
 	font-size: 24px;
+	img {
+		margin-right: 6px;
+	}
 }
 
 .docloadingzone {
