--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -1,3 +1,7 @@
+.mini.container {
+	padding: 0;
+}
+
 .searchButton {
 	background-color: #777;
 	color: white;
@@ -38,7 +42,6 @@
 	background-color: #ccc;
 	overflow: hidden;
 	text-align: center;
-	box-shadow: 0 0 6px #777;
 }
 
 .expanded .SearchZone {
@@ -118,7 +121,8 @@ h3.resultsTitle {
 	background-color: rgba(255, 255, 255, 0.7);
 	padding: 24px;
 	border: 0;
-	margin: 0 0 24px 0;
+	margin: 0;
+	box-shadow: inset 0px 2px 4px #333
 }
 
 .results.empty {
@@ -132,5 +136,9 @@ h3.resultsTitle {
 	p {
 		padding: 0 24px 24px 24px;
 		margin-bottom: 24px;
+	}
+
+	p:empty {
+		display: none;
 	}
 }
