--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,6 +34,9 @@ header.header {
 	//background-color: white;
 	color: white;
 	height: 120px;
+	img {
+		margin: 12px 0 0 12px;
+	}
 }
 
 .debugversion {
