--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -39,14 +39,12 @@ select#yearEnd {
 	height: auto;
 }
 
-
 .years-selects {
 	justify-content: center;
 	.col {
 		max-width: 200px;
 	}
 }
-
 
 .expanded .SearchField {
 	border-bottom: 0;
@@ -61,21 +59,38 @@ select#yearEnd {
 	text-align: center;
 }
 
-.expanded .SearchZone {
-	background-color: transparent;
-	box-shadow: none;
-	color: white;
-}
+.expanded {
+	.SearchZone {
+		background-color: transparent;
+		box-shadow: none;
+		color: white;
+	}
 
-.mini .SearchZone {
-	margin-bottom: 0;
-}
+	.form-row {
+		flex-direction: column;
+	}
 
+	.years-selects .col {
+		max-width: 100%;
+	}
+}
 
 //cambiar este nombre confuso
 .mini .searchZone {
 	display: flex;
-	justify-content: space-around;
+	justify-content: flex-start;
+	margin-bottom: 0;
+	.form-row {
+		width: 100%;
+	}
+
+	.searchButton {
+		margin-top: 0;
+	}
+
+	.years-selects.form-row {
+		padding: 0;
+	}
 }
 
 .mini .TaxBrowser {
@@ -104,6 +119,8 @@ select#yearEnd {
 	font-weight: 600;
 	color: white;
 	text-transform: uppercase;
+	max-width: 600px;
+	margin: 12px auto;
 }
 
 .taxbrowserTitle {
@@ -139,7 +156,7 @@ h3.resultsTitle {
 	padding: 24px;
 	border: 0;
 	margin: 0;
-	box-shadow: inset 0px 2px 4px #333
+	box-shadow: inset 0px 2px 4px #333;
 }
 
 .results.empty {
@@ -158,4 +175,16 @@ h3.resultsTitle {
 	p:empty {
 		display: none;
 	}
+}
+
+.TaxBrowserHome {
+	text-align: center;
+
+	h3 {
+		margin-bottom: 0;
+	}
+}
+
+.termdesc {
+	margin: 12px 0;
 }
