--- a/views/single-ctci_doc.twig
+++ b/views/single-ctci_doc.twig
@@ -6,6 +6,11 @@
 			<section class="article-content">
 				<div class="container">
 					<div class="row">
+						<div class="col-md-12">
+							<a id="backToSearch" href="#">Volver a la búsqueda</a>
+						</div>
+					</div>
+					<div class="row">
 						<div class="col-md-8">
 							{% include 'partial/docviewer.twig' with {data: docmeta} %}
 						</div>
