--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -50,7 +50,9 @@ header.header {
 
 body {
 	background-color: #020226;
-	background-image: linear-gradient(to left, #01515a, #020226);
+	background-image: url('../img/nodos.png'), linear-gradient(to left, #01515a, #020226);
+	background-repeat: no-repeat;
+	background-position: top right;
 }
 
 //Singles
