--- a/views/footer.twig
+++ b/views/footer.twig
@@ -1,5 +1,17 @@
 <div class="wrapper">
-	
+	<div class="container">
+		<div class="row">
+			<div class="col-md-4">
+				<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img src="{{ theme.link}}/../dist/img/cnid_logo_white.svg" alt="{{ site.name }}"></a>
+			</div>
+			<div class="col-md-6">
+
+			</div>
+			<div class="col-md-2">
+
+			</div>	
+		</div>	
+	</div>
 </div>
 
 <div class="debugversion">v.{{ version }}</div>
