--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -34,10 +34,10 @@ header.header {
 	width: 100%;
 	//background-color: white;
 	color: white;
-	height: 120px;
-	padding: 12px;
+	height: 90px;
+	padding: 12px 12px 12px 24px;
 	img {
-		max-width: 100%;
+		max-width: 100px;
 	}
 }
 
@@ -55,6 +55,81 @@ body {
 	background-image: url('../img/nodos_e.svg'), linear-gradient(215deg, #01515a, #020226);
 	background-repeat: no-repeat;
 	background-position: right top, center;
+}
+
+#nav-main {
+	position: absolute;
+	right: 12px;
+	top: 12px;
+
+	li {
+		list-style: none;
+		display: inline-block;
+		margin: 12px;
+	}
+
+	a {
+		color: white;
+		text-transform: uppercase;
+		font-weight: 600;
+		font-size: 24px;
+	}
+
+	@include respond-below(md) {
+		left: -240px;
+		width: 240px;
+		opacity: 0;
+		transition: all 0.3s linear;
+		top: 0;
+		z-index: 10;
+		background-color: rgba(0, 6, 44, 0.9);
+		width: 100%;
+		height: 100%;
+		
+		&.active {
+			left: 0;
+			opacity: 1;
+		}
+
+		li {
+			display: block;
+			text-align: left;
+		}
+
+	}
+}
+
+.mobileToggle {
+		display: none;
+	}
+
+	@include respond-below(md) {
+		.mobileToggle {
+			display: block;
+			position: absolute;
+			right: 12px;
+			top: 12px;
+			color: white;
+			font-size: 32px;
+			a {
+				color: white;
+			}
+		}
+	}
+
+#footer {
+	background-color: #00062c;
+	color: white;
+	padding: 12px 0;
+
+	.debugversion {
+		color: #333;
+	}
+
+	img {
+		max-width: 100%;
+		height: auto;
+	}
 }
 
 //Singles
