--- a/views/base.twig
+++ b/views/base.twig
@@ -12,11 +12,17 @@
 			{% block header %}
 				<div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
-						<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img src="{{ theme.link}}/../dist/img/cnid_logo_white.svg" alt="{{ site.name }}"></a>
+						<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img src="{{ theme.link}}/../dist/img/cnid_simple.svg" alt="{{ site.name }}"></a>
 					</h1>
-					<!--<nav id="nav-main" class="nav-main" role="navigation">
+					<div class="mobileToggle">
+						<a href="#" class="toggleMenu"><i class="fas fa-bars"></i></a>
+					</div>
+					<nav id="nav-main" class="nav-main" role="navigation">
+						<div class="mobileToggle">
+							<a href="#" class="toggleMenu"><i class="fas fa-times"></i></a>
+						</div>
 						{% include "menu.twig" with {'items': menu.get_items} %}
-					</nav>--><!-- #nav -->
+					</nav><!-- #nav -->
 				</div>
 			{% endblock %}
 		</header>
