--- a/views/base.twig
+++ b/views/base.twig
@@ -13,6 +13,7 @@
 				<div class="wrapper">
 					<h1 class="hdr-logo" role="banner">
 						<a class="hdr-logo-link" href="{{site.url}}" rel="home"><img src="{{ theme.link}}/../dist/img/cnid_simple.svg" alt="{{ site.name }}"></a>
+						<span class="sitename">{{site.name}}</span>
 					</h1>
 					<div class="mobileToggle">
 						<a href="#" class="toggleMenu"><i class="fas fa-bars"></i></a>
