--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -63,7 +63,7 @@
 	text-align: right;
 	padding: 24px;
 	margin-bottom: 0;
-	background-color: #ccc;
+	background-color: rgba(204, 204, 204, 0.9);
 	text-align: center;
 }
 
@@ -141,7 +141,7 @@
 
 	.filterHomeSection {
 		padding: 36px;
-		background-color: #ccc;
+		background-color: rgba(204, 204, 204, 0.9);
 		color: #777;
 		margin-bottom: 24px;
 		position: relative;
@@ -173,7 +173,7 @@
 .TaxBrowser {
 	margin-top: 24px;
 	padding: 36px;
-	background-color: #ccc;
+	background-color: rgba(204, 204, 204, 0.9);
 	color: #777;
 	h3.numberResults {
 		font-size: 22px;
