--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -112,8 +112,7 @@ body {
 	}
 
 	@include respond-below(md) {
-		left: -240px;
-		width: 240px;
+		left: -100%;
 		opacity: 0;
 		transition: all 0.3s linear;
 		top: 0;
