--- a/src/sass/components/Search.scss
+++ b/src/sass/components/Search.scss
@@ -107,6 +107,16 @@
 		}
 }
 
+.withValue  > div {
+	border-color: #009f94;
+	border-width: 2px;
+}
+
+label.wv {
+	font-weight: 600;
+	color: #01515a;
+}
+
 .mini .colsearchbutton,
 .mini .colclean {
 	text-align: right;
