--- a/views/single-ctci_doc.twig
+++ b/views/single-ctci_doc.twig
@@ -7,7 +7,7 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-md-12">
-							<a id="backToSearch" href="#">Volver a la búsqueda</a>
+							<a id="backToSearch" class="backsearchbutton" href="#"><img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 54 54'%3E%3Cdefs%3E%3Cstyle%3E.a%7Bfill:none;stroke:%23fff;stroke-linecap:round;stroke-linejoin:round;stroke-width:2px;%7D%3C/style%3E%3C/defs%3E%3Cpath class='a' d='M27,1a24.19,24.19,0,0,1,2.55.13,23.53,23.53,0,0,1,2.52.37c.84.17,1.66.37,2.48.62s1.61.53,2.4.86,1.56.69,2.31,1.09a25.16,25.16,0,0,1,2.18,1.31,25.47,25.47,0,0,1,3.94,3.24,25.47,25.47,0,0,1,3.24,3.94,25.16,25.16,0,0,1,1.31,2.18c.4.75.76,1.52,1.09,2.31s.61,1.59.86,2.4.45,1.64.62,2.48a23.53,23.53,0,0,1,.37,2.52,25.07,25.07,0,0,1,0,5.1,23.53,23.53,0,0,1-.37,2.52c-.17.84-.37,1.66-.62,2.48S51.35,36.16,51,37s-.69,1.56-1.09,2.31a25.16,25.16,0,0,1-1.31,2.18,25.47,25.47,0,0,1-3.24,3.94,25.47,25.47,0,0,1-3.94,3.24,25.16,25.16,0,0,1-2.18,1.31A24.34,24.34,0,0,1,37,51c-.79.33-1.59.61-2.4.86s-1.64.45-2.48.62a23.53,23.53,0,0,1-2.52.37,25.07,25.07,0,0,1-5.1,0,23.53,23.53,0,0,1-2.52-.37c-.84-.17-1.66-.37-2.48-.62s-1.61-.53-2.4-.86a24.34,24.34,0,0,1-2.31-1.09,25.16,25.16,0,0,1-2.18-1.31,25.47,25.47,0,0,1-3.94-3.24,25.47,25.47,0,0,1-3.24-3.94,25.16,25.16,0,0,1-1.31-2.18A24.34,24.34,0,0,1,3,37c-.33-.79-.61-1.59-.86-2.4s-.45-1.64-.62-2.48a23.53,23.53,0,0,1-.37-2.52,25.07,25.07,0,0,1,0-5.1,23.53,23.53,0,0,1,.37-2.52c.17-.84.37-1.66.62-2.48s.53-1.61.86-2.4a24.34,24.34,0,0,1,1.09-2.31,25.16,25.16,0,0,1,1.31-2.18A25.47,25.47,0,0,1,8.62,8.62a25.47,25.47,0,0,1,3.94-3.24,25.16,25.16,0,0,1,2.18-1.31c.75-.4,1.52-.76,2.31-1.09s1.59-.61,2.4-.86,1.64-.45,2.48-.62a23.53,23.53,0,0,1,2.52-.37A24.19,24.19,0,0,1,27,1Z'/%3E%3Cline class='a' x1='15' y1='27' x2='38' y2='27'/%3E%3Cline class='a' x1='15' y1='27' x2='26' y2='39'/%3E%3Cline class='a' x1='15' y1='27' x2='26' y2='15'/%3E%3C/svg%3E" alt="Ícono volver">Volver a la búsqueda</a>
 						</div>
 					</div>
 					<div class="row">
@@ -36,27 +36,59 @@
 								<div class="document-meta">
 									
 									
-
+									{% if post.terms({query: {taxonomy: 'docauthor'}}) %}
 									<div class="docauthor doctermlist">
 										<span class="label">Autor/a: </span>
 										{% for term in post.terms( {query: {taxonomy: 'docauthor'}}) %}
-											<a class="tag" href="{{term.link}}">{{term}}</a>
+											<span class="tag">{{term}}</span>
 										{% endfor %}
 									</div>
+									{% endif %}
 
+									{% if post.terms({query: {taxonomy: 'doctype'}}) %}
 									<div class="doctype doctermlist">
 										<span class="label">Tipo de documento: </span>
 										{% for term in post.terms( {query: {taxonomy: 'doctype'}}) %}
-											<a class="tag" href="{{term.link}}">{{term}}</a>
+											<a class="tag" href="{{function('ctcisearch_termlink', term.id, 'doctype')}}">{{term}}</a>
 										{% endfor %}
 									</div>
+									{% endif %}
 
+									{% if post.terms({query: {taxonomy: 'doctema'}}) %}
+									<div class="doctema doctermlist">
+										<span class="label">Tema: </span>
+										{% for term in post.terms( {query: {taxonomy: 'doctema'}}) %}
+											<a class="tag" href="{{function('ctcisearch_termlink', term.id, 'doctema')}}">{{term}}</a>
+										{% endfor %}
+									</div>
+									{% endif %}
+
+									{% if post.terms({query: {taxonomy: 'docarea'}}) %}
+									<div class="docarea doctermlist">
+										<span class="label">Área: </span>
+										{% for term in post.terms( {query: {taxonomy: 'docarea'}}) %}
+											<a class="tag" href="{{function('ctcisearch_termlink', term.id, 'docarea')}}">{{term}}</a>
+										{% endfor %}
+									</div>
+									{% endif %}
+
+									{% if post.terms({query: {taxonomy: 'docpilar'}}) %}
+									<div class="docpilar doctermlist">
+										<span class="label">Pilar: </span>
+										{% for term in post.terms( {query: {taxonomy: 'docpilar'}}) %}
+											<a class="tag" href="{{function('ctcisearch_termlink', term.id, 'docpilar')}}">{{term}}</a>
+										{% endfor %}
+									</div>
+									{% endif %}
+
+									{% if post.terms({query: {taxonomy: 'post_tag'}}) %}
 									<div class="tags doctermlist">
 										<span class="label">Etiquetas: </span>
 										{% for term in post.terms( {query: {taxonomy: 'post_tag'}}) %}
-											<a class="tag" href="{{term.link}}">{{term}}</a>
+											<a class="tag" href="{{function('ctcisearch_termlink', term.id, 'post_tag')}}">{{term}}</a>
 										{% endfor %}
 									</div>
+									{% endif %}
 								</div>
 								
 							</div>
