--- a/views/single-ctci_doc.twig
+++ b/views/single-ctci_doc.twig
@@ -12,7 +12,15 @@
 					</div>
 					<div class="row">
 						<div class="col-md-8">
+						{% if docmeta.video_url %}
+							
+							{% include 'partial/videoviewer.twig' with {data: docmeta} %}
+						
+						{% else %}
+
 							{% include 'partial/docviewer.twig' with {data: docmeta} %}
+							
+						{% endif %}
 						</div>
 
 						<div class="col-md-4">
@@ -92,8 +100,14 @@
 								</div>
 								
 							</div>
+							
+							{% if docmeta.video_url %}
+							
+							{% else %}
 
 							<a class="btn btn-download btn-dark" href="{{docmeta.pdfurl}}">Descargar <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' class='icon icon-tabler icon-tabler-download' width='24' height='24' viewBox='0 0 24 24' stroke-width='3' stroke='%23607D8B' fill='none' stroke-linecap='round' stroke-linejoin='round'%3E%3Cpath stroke='none' d='M0 0h24v24H0z'/%3E%3Cpath d='M4 17v2a2 2 0 0 0 2 2h12a2 2 0 0 0 2 -2v-2' /%3E%3Cpolyline points='7 11 12 16 17 11' /%3E%3Cline x1='12' y1='4' x2='12' y2='16' /%3E%3C/svg%3E" alt="Icono Descargar"></a>
+						
+							{% endif %}
 						</div>
 
 
